infra/k8s/shorty-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorty-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shorty
  template:
    metadata:
      labels:
        app: shorty
    spec:
      container:
        - name: shorty
          image: mickeyzzz/shorty
