infra/k8s/postgres-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorty-postgres-srv
spec:
  selector:
    app: shorty-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
