infra/k8s/shorty-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorty-srv
spec:
  selector:
    app: shorty
  ports:
    - name: shorty
      protocol: TCP
      port: 3000
      targetPort: 3000
